--- a/alltutors.html
+++ b/alltutors.html
@@ -405,7 +405,7 @@
                           class="btn btn-ndark text-center"
                           style="height: 52px"
                         >
-                          <p class="mt-1">All Tutors</p>
+                          <p style="margin-top: 7px">All Tutors</p>
                         </a>
                         <button
                           class="btn btn-outline-primary py-1"
@@ -440,7 +440,10 @@
                   <!-- result box -->
                   <div class="mt-4">
                     <div class="">
-                      <div class="my-4 px-4" style="height: 500px; overflow-y: auto">
+                      <div
+                        class="my-4 px-4"
+                        style="height: 500px; overflow-y: auto"
+                      >
                         <div
                           class="d-flex justify-content-between align-items-start gap-3 gap-lg-0 align-items-lg-center border-bottom border-2 py-3"
                         >
