--- a/search-tutor.html
+++ b/search-tutor.html
@@ -404,7 +404,7 @@
                         class="btn btn-ndark text-center"
                         style="height: 52px"
                       >
-                        <p class="mt-1">All Tutors</p>
+                        <p  style="margin-top: 7px;">All Tutors</p>
                       </a>
                       <button
                         class="btn btn-outline-primary py-1"
@@ -460,7 +460,7 @@
                         class="btn btn-ndark text-center"
                         style="height: 52px"
                       >
-                        <p class="mt-1">All Tutors</p>
+                        <p class="" style="margin-top: 7px;">All Tutors</p>
                       </a>
                       <button
                         class="btn btn-outline-primary py-1"
@@ -630,7 +630,7 @@
                           </div>
                         </div>
                         <div
-                          class="sended d-flex justify-content-between align-items-start gap-3 gap-lg-0 align-items-lg-center border-bottom border-2 py-3"
+                          class="disabled d-flex justify-content-between align-items-start gap-3 gap-lg-0 align-items-lg-center border-bottom border-2 py-3"
                         >
                           <div class="">
                             <p class="text-info mb-0 fw-semibold">
@@ -660,7 +660,7 @@
                           </div>
                         </div>
                         <div
-                          class="sended d-flex justify-content-between align-items-start gap-3 gap-lg-0 align-items-lg-center border-bottom border-2 py-3"
+                          class="disabled d-flex justify-content-between align-items-start gap-3 gap-lg-0 align-items-lg-center border-bottom border-2 py-3"
                         >
                           <div class="">
                             <p class="text-info mb-0 fw-semibold">
